Final Commit Push
Updated the styles, using pseudo classes and pseudo elements.

--- a/tss_bike.html
+++ b/tss_bike.html
@@ -17,6 +17,7 @@
     <title>TSS Cycling Class</title>
     <link rel="stylesheet" href="tss_layout.css" />
     <link rel="stylesheet" href="tss_styles.css" />
+    <link rel="shortcut icon" href="bikeicon.png" type="image/x-icon">
 </head>
 
 <body>
