--- a/tss_run.html
+++ b/tss_run.html
@@ -17,6 +17,7 @@
     <title>TSS Running Class</title>
     <link rel="stylesheet" href="tss_layout.css" />
     <link rel="stylesheet" href="tss_styles.css" />
+    <link rel="shortcut icon" href="runicon.png" type="image/x-icon">
 </head>
 
 <body>
