--- a/tss_swim.html
+++ b/tss_swim.html
@@ -17,6 +17,7 @@
     <title>TSS Swimming Class</title>
     <link rel="stylesheet" href="tss_layout.css" />
     <link rel="stylesheet" href="tss_styles.css" />
+    <link rel="shortcut icon" href="swimicon.png" type="image/x-icon">
 </head>
 
 <body>
